--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,26 @@
 {
-    "name": "laravel-enso/select",
+    "name": "genealogiawebsite/select",
     "description": "Bootstrap Select data builder with server-side data fetching capability and a VueJS component",
     "keywords": [
-        "laravel-enso",
+        "genealogiawebsite",
         "select",
         "bootstrap-select",
         "select-server-side"
     ],
-    "homepage": "https://github.com/laravel-enso/select",
+    "homepage": "https://github.com/genealogiawebsite/select",
     "type": "library",
     "license": "MIT",
     "authors": [{
         "name": "Adrian Ocneanu",
         "email": "aocneanu@gmail.com",
-        "homepage": "https://laravel-enso.com",
+        "homepage": "https://genealogiawebsite.com",
         "role": "Developer"
     }],
     "require": {
         "php": ">=7.4.0",
         "laravel/framework": "^7.0|^8.0",
-        "laravel-enso/filters": "^2.0",
-        "laravel-enso/helpers": "^2.0"
+        "genealogiawebsite/filters": "^2.0",
+        "genealogiawebsite/helpers": "^2.0"
     },
     "autoload": {
         "psr-4": {
